--- a/loginform.html
+++ b/loginform.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="form-box">
-    <h1>Varun Enterprises</h1>
+    <h1>Signup</h1>
     <p>Please fill this form to create an account.</p>
   
 
